--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.16"
   },
   "devDependencies": {
